--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "i": "^0.3.6",
     "mongoose": "^5.10.2",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4"
   },
   "devDependencies": {
